<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/view_menu_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageView
            android:id="@+id/bar_title_img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/bar_title_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textSize="15sp"
            tools:text="我的订单" />

        <SearchView
            android:id="@+id/main_sv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:queryHint="请输入关键词搜索" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bar_title_layout_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/view_menu_item"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="2dp">

        <TextView
            android:id="@+id/bar_title_tv_view_order"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/bar_title_menu_orders"
            android:textSize="18sp" />

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@color/main_menu_view" />

        <TextView
            android:id="@+id/bar_title_tv_add_order"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/bar_title_menu_add_orders"
            android:textSize="18sp" />

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@color/main_menu_view" />

        <TextView
            android:id="@+id/bar_title_tv_view_cinema"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/bar_title_menu_cinema"
            android:textSize="18sp" />

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@color/main_menu_view" />

        <TextView
            android:id="@+id/bar_title_tv_add_cinema"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/bar_title_menu_add_cinema"
            android:textSize="18sp" />

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@color/main_menu_view" />

        <TextView
            android:id="@+id/bar_title_tv_exit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/bar_title_menu_exit"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>